--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name:     Grosset v3
-Theme URI:      http://chrisbishop.me.uk/
+Theme Name:     Grosset Wines
+Theme URI:      https://github.com/domingobishop/grosset
 Description:    Grosset v3 - Child theme for the Twenty Thirteen theme 
 Author:         Chris Bishop
-Author URI:     http://chrisbishop.me.uk/
+Author URI:     https://github.com/domingobishop/
 Template:       twentythirteen
-Version:        0.3.0
+Version:        3.2.0
 License:		Creative Commons Attribution-Share Alike 3.0 (http://creativecommons.org/licenses/by-sa/3.0/. Feel free to make any changes.
 */
 
